# market-risk-baseline-engine

./: .gitignore  LICENSE  README.md  config.example.toml  correlation.py  data_loader.py  environment.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  returns.py  risk_metrics.py  visualizations.py
.github/workflows/: ci.yml
src/market_risk_baseline/: __init__.py  __main__.py  cli.py  config.py  correlation.py  data_loader.py  estimation.py  providers.py  reporting.py  returns.py  risk_metrics.py  visualizations.py
tests/: test_cli.py  test_config.py  test_data_loader.py  test_dependence.py  test_metrics.py  test_packaging.py  test_providers.py
