[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "market-risk-baseline-engine"
version = "0.1.4"
description = "An asset-level descriptive market-risk baseline for adjusted daily prices."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Dharmashekhar Chauhan" },
]
dependencies = [
    "matplotlib>=3.9,<4",
    "numpy>=2.0,<3",
    "pandas>=2.2,<3",
    "seaborn>=0.13,<1",
    "yfinance==0.2.66",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
    "setuptools>=75",
]

[project.scripts]
market-risk-baseline = "market_risk_baseline.cli:main"

[project.urls]
Repository = "https://github.com/SIRE02/market-risk-baseline-engine"

[tool.setuptools.packages.find]
where = ["src"]
