[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "market-risk-baseline-engine"
version = "0.2.1"
description = "An asset-level descriptive market-risk baseline for adjusted daily prices."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Dharmashekhar Chauhan" },
]
dependencies = [
    "matplotlib>=3.9,<4",
    "numpy>=2.0,<3",
    "pandas>=2.2,<3",
    "seaborn>=0.13,<1",
    "yfinance==0.2.66",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
    "setuptools>=75",
]
dev = [
    "build>=1.2,<2",
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
    "setuptools>=75",
]

[project.scripts]
market-risk-baseline = "market_risk_baseline.cli:main"

[project.urls]
Repository = "https://github.com/SIRE02/market-risk-baseline-engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
